4568713181927b8a7ff3bcf160089c79cf32d0d4 Dev: Fix text alignment when in a narrow window Dev: Fix Semantic UI integration - wasn't applying a lot of the custom styles
Sync to source repo @4568713181927b8a7ff3bcf160089c79cf32d0d4

--- a/css/dataTables.dataTables.css
+++ b/css/dataTables.dataTables.css
@@ -539,20 +539,20 @@ div.dt-container div.dt-layout-row div.dt-layout-cell:empty {
 }
 
 @media screen and (max-width: 767px) {
-  div.dt-container div.dt-layout-row {
+  div.dt-container div.dt-layout-row:not(.dt-layout-table) {
     display: block;
   }
-  div.dt-container div.dt-layout-row div.dt-layout-cell {
+  div.dt-container div.dt-layout-row:not(.dt-layout-table) div.dt-layout-cell {
     display: block;
     text-align: center;
   }
-  div.dt-container div.dt-layout-row div.dt-layout-cell > * {
+  div.dt-container div.dt-layout-row:not(.dt-layout-table) div.dt-layout-cell > * {
     margin: 0.5em 0;
   }
-  div.dt-container div.dt-layout-row div.dt-layout-cell.dt-layout-start {
+  div.dt-container div.dt-layout-row:not(.dt-layout-table) div.dt-layout-cell.dt-layout-start {
     margin-right: 0;
   }
-  div.dt-container div.dt-layout-row div.dt-layout-cell.dt-layout-end {
+  div.dt-container div.dt-layout-row:not(.dt-layout-table) div.dt-layout-cell.dt-layout-end {
     margin-left: 0;
   }
 }
